[package]
autotests   = false
description = "Macro for generating `MoveStruct`s from Move source code"
name        = "af-sui-pkg-sdk"
version     = "0.10.3"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
af-move-type = { version = "0.13.0", public = true, path = "../af-move-type" }
af-sui-types = { version = "0.13.0", public = true, features = ["u256"], path = "../af-sui-types" }
tabled       = { version = "0.16", public = true }
# Because of `tabled`
papergrid = { version = "0.17", public = true }

derive-new = "0.7.0"
serde      = "1"

[dev-dependencies]
anyhow      = "1"
derive_more = { version = "2", features = ["display"] }
insta       = "1"
trybuild    = { version = "1", features = ["diff"] }

[[example]]
name = "gen-move-type-display"
path = "examples/display.rs"

[[test]]
name = "tests"
path = "tests/tests.rs"
