[package]
description = "Aftermath's extensions to `sui-sdk-types`"
name        = "af-sui-types"
version     = "0.8.8"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[features]
fuzzing = ["dep:proptest"]
hash    = ["sui-sdk-types/hash"]
u256    = ["dep:primitive-types", "dep:rand", "dep:uint"]

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
base64        = { version = "0.22", public = true }
bcs           = { version = "0.1", public = true }
bs58          = { version = "0.5", public = true }
proptest      = { version = "1", public = true, optional = true }
rand          = { version = "0.9", public = true, optional = true }
serde         = { version = "1", public = true }
serde_with    = { version = "3", public = true, features = ["base64"] }
sui-sdk-types = { version = "0.0.3", public = true, features = ["serde"] }

enum_dispatch = "0.3"
hex           = "0.4"
ref-cast      = "1"
thiserror     = "2"

derive_more = { version = "2", features = ["from_str"] }

# for u256
primitive-types = { version = "0.12", features = ["fp-conversion"], optional = true }
uint            = { version = "0.9", optional = true }

[dev-dependencies]
insta         = "1"
proptest      = "1"
serde_json    = "1"
sui-sdk-types = { version = "0.0.3", features = ["proptest"] }
test-strategy = "0.4"

[[test]]
name              = "bcs"
path              = "tests/bcs.rs"
required-features = ["hash"]
