[package]
description = "Move types for Sui's `MoveStdLib` package at address 0x1"
name        = "move-stdlib-sdk"
version     = "0.10.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
af-sui-pkg-sdk = { version = "0.9.1", path = "../af-sui-pkg-sdk" }

thiserror = "2"
