[package]
description = "Pyth Hermes client by AftermathFinance"
name        = "pyth-hermes-client"
version     = "0.2.4"

authors.workspace    = true
categories.workspace = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[dependencies]
base64             = "0.22"
eventsource-stream = "0.2"
futures            = "0.3"
hex                = "0.4"
pyth-sdk           = "0.8"
reqwest            = { version = "0.12", features = ["json", "stream"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
strum              = { version = "0.26", features = ["derive"] }
thiserror          = "2"
url                = "2"

[dev-dependencies]
clap       = { version = "4", features = ["derive"] }
color-eyre = "0.6"
tokio      = { version = "1", features = ["full"] }

[[example]]
name = "pyth-price-feeds"
path = "examples/price_feeds.rs"

[[example]]
name = "pyth-latest-price-update"
path = "examples/latest_price_update.rs"

[[example]]
name = "pyth-price-update"
path = "examples/price_update.rs"

[[example]]
name = "pyth-price-update-stream"
path = "examples/price_update_stream.rs"
