[package]
description = "Pyth Hermes client by AftermathFinance"
name        = "pyth-hermes-client"
version     = "0.3.0"

authors.workspace    = true
categories.workspace = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[features]
default    = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
stream     = ["dep:eventsource-stream", "dep:futures", "dep:serde_json", "reqwest/stream"]

[dependencies]
base64   = "0.22"
hex      = "0.4"
pyth-sdk = "0.8"
# reqwest            = { version = "0.12", default-features = false, features = ["json", "stream"] }
reqwest   = { version = "0.12", default-features = false, features = ["json"] }
serde     = { version = "1", features = ["derive"] }
strum     = { version = "0.26", features = ["derive"] }
thiserror = "2"
url       = "2"

eventsource-stream = { version = "0.2", optional = true }
futures            = { version = "0.3", optional = true }
serde_json         = { version = "1", optional = true }

[dev-dependencies]
clap       = { version = "4", features = ["derive"] }
color-eyre = "0.6"
serde_json = "1"
tokio      = { version = "1", features = ["full"] }

[[example]]
name = "pyth-price-feeds"
path = "examples/price_feeds.rs"

[[example]]
name = "pyth-latest-price-update"
path = "examples/latest_price_update.rs"

[[example]]
name = "pyth-price-update"
path = "examples/price_update.rs"

[[example]]
name              = "pyth-price-update-stream"
path              = "examples/price_update_stream.rs"
required-features = ["stream"]
