[package]
description = "SDK for Pyth's Sui package; maintained by Aftermath"
name        = "pyth-sui-sdk"
version     = "0.21.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[features]
json-rpc = ["dep:af-ptbuilder", "dep:jsonrpsee-core", "dep:sui-jsonrpc", "sui-jsonrpc/client-api"]
ptb      = ["bytes/serde", "dep:af-ptbuilder", "dep:bytes", "dep:extension-traits"]
pyth-sdk = ["dep:af-utilities", "dep:pyth-sdk"]

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
af-ptbuilder   = { version = "8.0.0", public = true, optional = true, path = "../af-ptbuilder" }
af-sui-types   = { version = "0.12.0", public = true, path = "../af-sui-types" }
af-utilities   = { version = "0.10", public = true, optional = true, path = "../af-utilities" }
bcs            = { version = "0.1", public = true }
bytes          = { version = "1", public = true, optional = true }
hex            = { version = "0.4", public = true }
jsonrpsee-core = { version = "0.25", public = true, optional = true }
pyth-sdk       = { version = "0.8", public = true, optional = true }
sui-jsonrpc    = { version = "0.18.0", public = true, default-features = false, optional = true, path = "../sui-jsonrpc" }
sui-sdk-types  = { version = "0.0.6", public = true }

af-move-type      = { version = "0.12.0", path = "../af-move-type" }
af-sui-pkg-sdk    = { version = "0.10.2", path = "../af-sui-pkg-sdk" }
sui-framework-sdk = { version = "0.12.2", path = "../sui-framework-sdk" }
wormhole-sui-sdk  = { version = "0.12.2", path = "../wormhole-sui-sdk" }

serde     = "1"
thiserror = "2"

# Optional deps
extension-traits = { version = "2", optional = true }

# Optional aftermath deps
