[package]
description = "Move types for the Sui package at address 0x2"
name        = "sui-framework-sdk"
version     = "0.11.11"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
af-move-type    = { version = "0.9.9", public = true, path = "../af-move-type" }
af-sui-pkg-sdk  = { version = "0.9.10", public = true, path = "../af-sui-pkg-sdk" }
af-sui-types    = { version = "0.8.9", public = true, path = "../af-sui-types" }
move-stdlib-sdk = { version = "0.10.10", public = true, path = "../move-stdlib-sdk" }

derive_more = { version = "2", features = ["from"] }


[dev-dependencies]
anyhow     = "1"
tokio-test = "0.4.3"
